fixed user form misaligning on invalid input

--- a/src/atoms/EmailInput/EmailInput.module.scss
+++ b/src/atoms/EmailInput/EmailInput.module.scss
@@ -1,6 +1,7 @@
 .inputField{
   display: flex;
   flex-direction: column;
+  height: 60px;
   span{
     // position: absolute;
     font-size: 12px;
