--- a/src/atoms/NameInput/NameInput.module.scss
+++ b/src/atoms/NameInput/NameInput.module.scss
@@ -1,6 +1,8 @@
 .inputField{
   display: flex;
   flex-direction: column;
+  height: 60px;
+
   span{
     // position: absolute;
     font-size: 12px;
